[gd_scene load_steps=13 format=3 uid="uid://d3scx1bhr7cfc"]

[ext_resource type="Texture2D" uid="uid://bdbvndoa3f8t3" path="res://assets/materials/raw/dirt_floor_1k/textures/dirt_floor_diff_1k.jpg" id="1_q1eem"]
[ext_resource type="Script" path="res://world.gd" id="1_xarnj"]
[ext_resource type="Texture2D" uid="uid://5sci0q4o2xg5" path="res://assets/materials/raw/dirt_floor_1k/textures/dirt_floor_rough_1k.jpg" id="2_npw1n"]
[ext_resource type="PackedScene" uid="uid://bncn03noltels" path="res://objects/test_colliding_object.tscn" id="4_0ihgw"]
[ext_resource type="PackedScene" uid="uid://tewr0o1447a4" path="res://objects/test_colliding_object2.tscn" id="5_afnsq"]
[ext_resource type="PackedScene" uid="uid://bxucqg1xshhty" path="res://gui/ActionBar.tscn" id="7_bb0vf"]
[ext_resource type="Script" path="res://ServerScripts/Spawn.gd" id="8_60twa"]
[ext_resource type="PackedScene" uid="uid://bjjr7j3pd76oj" path="res://gui/Chat.tscn" id="8_je4sl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v5pk8"]
albedo_texture = ExtResource("1_q1eem")
roughness_texture = ExtResource("2_npw1n")
uv1_scale = Vector3(7.081, 7.081, 7.081)

[sub_resource type="BoxMesh" id="BoxMesh_qwyqe"]
material = SubResource("StandardMaterial3D_v5pk8")
size = Vector3(300, 0.076, 300)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_yxp6l"]
points = PackedVector3Array(-150, -0.038, -150, -150, 0.038, -150, 150, -0.038, -150, -150, -0.038, 150, -150, 0.038, 150, 150, 0.038, -150, 150, -0.038, 150, 150, 0.038, 150)

[sub_resource type="BoxMesh" id="BoxMesh_iknrc"]

[node name="World" type="Node3D"]
script = ExtResource("1_xarnj")

[node name="sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.600448, 0.799664, 0, -0.799664, -0.600448, 0, 0, 0)
light_angular_distance = 3.2
shadow_enabled = true

[node name="Borders" type="Node3D" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="Baseplate" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("BoxMesh_qwyqe")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_yxp6l")

[node name="Spawn" type="MeshInstance3D" parent="."]
transform = Transform3D(0.28, 0, 0, 0, 0.28, 0, 0, 0, 0.28, 4.53553, -0.0357659, -6.59642)
mesh = SubResource("BoxMesh_iknrc")
skeleton = NodePath("")
script = ExtResource("8_60twa")

[node name="TestCollidingObject" parent="." instance=ExtResource("4_0ihgw")]
transform = Transform3D(0.975523, -0.219897, 4.44089e-16, 0.203776, 0.904004, 0.375836, -0.0826454, -0.366637, 0.926686, 0, 0.337691, 0)
mass = 0.03
continuous_cd = true
freeze_mode = 1

[node name="TestCollidingObject2" parent="." instance=ExtResource("5_afnsq")]
transform = Transform3D(0.875481, -0.483249, -0.00203487, 0.483248, 0.875483, -0.000655978, 0.00209849, -0.000409053, 0.999998, 0.000747204, 0.00308943, -3.78207)
mass = 0.13
freeze_mode = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://character.tscn")
spawn_path = NodePath("..")

[node name="ActionBar" parent="." instance=ExtResource("7_bb0vf")]

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -50.5
offset_right = 72.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="btnStartServer" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Start server"

[node name="btnStartClient" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Start client
"

[node name="btnStartSingleplayer" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Start singleplayer"

[node name="Chat" parent="." instance=ExtResource("8_je4sl")]
visible = false

[connection signal="ChatClosed" from="ActionBar" to="Chat" method="_on_action_bar_chat_closed"]
[connection signal="ChatOpened" from="ActionBar" to="Chat" method="_on_action_bar_chat_opened"]
[connection signal="pressed" from="Menu/VBoxContainer/btnStartServer" to="." method="_on_btn_start_server_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/btnStartClient" to="." method="_on_btn_start_client_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/btnStartSingleplayer" to="." method="_on_btn_start_singleplayer_pressed"]
